[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sweet Talk.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Interfaz.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0.160784, 0.0509804, 0.0509804, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 10
outline_color = Color( 0.027451, 0.027451, 0.027451, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 1 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -14.5
margin_top = -38.0
margin_right = 14.5
margin_bottom = 113.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -273.5
margin_top = -117.5
margin_right = 273.5
margin_bottom = 117.5
custom_fonts/font = SubResource( 2 )
text = "Space Guy
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonPlay" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.786
anchor_right = 0.5
anchor_bottom = 0.786
margin_left = -100.0
margin_top = -50.2
margin_right = 100.0
margin_bottom = 49.8
custom_fonts/font = SubResource( 3 )
text = "JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MensajeTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="iniciar_juego" from="." to="." method="nuevo_juego"]
[connection signal="pressed" from="BotonPlay" to="." method="_on_BotonPlay_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
